fix(frontend): login dialog overflow

--- a/apps/frontend/src/shared/modules/site-header/components/login-dialog/login-dialog.component.less
+++ b/apps/frontend/src/shared/modules/site-header/components/login-dialog/login-dialog.component.less
@@ -1,6 +1,6 @@
 :host {
   width: 300px;
-  height: 174px;
+  min-height: 174px;
   display: block;
 }
 
